--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
                 </div>
                 <nav class="nav">
                     <ul class="ul">
-                        <li><a href="#" class="btn-home">Home</a></li>
+                        <li><a href="index.html" class="btn-home">Home</a></li>
                         <li><a href="#product" class="btn-nav">Menu</a></li>
                         <li><a href="#about" class="btn-nav">About</a></li>
                         <li><a href="#footer" class="btn-nav">Contact</a></li>
@@ -42,7 +42,7 @@
                         Eatos punya berbagai macam varian saus dan toping yang bisa buat kamu ketagihan.
                         Eatos cocok untuk kamu yang suka ngemil dengan porsi yang banyak.
                         </p>
-                        <a href="#" class="btn-readmore">Lihat lebih banyak...</a>
+                        <a href="#about" class="btn-readmore">Lihat lebih banyak...</a>
                     </div>
                     <div class="bc-welcome">
                         <img src="assets/product01.png" alt="product01" class="img-product">
